--- a/posvue/package.json
+++ b/posvue/package.json
@@ -8,6 +8,7 @@
   },
   "dependencies": {
     "axios": "^0.26.0",
+    "boxicons": "^2.1.1",
     "bulma": "^0.9.3",
     "core-js": "^3.8.3",
     "vue": "^3.2.13",
