--- a/posvue/package.json
+++ b/posvue/package.json
@@ -10,8 +10,11 @@
     "axios": "^0.26.0",
     "boxicons": "^2.1.1",
     "bulma": "^0.9.3",
+    "chart.js": "^2.9.4",
     "core-js": "^3.8.3",
     "vue": "^3.2.13",
+    "vue-chart-3": "^3.1.2",
+    "vue-chartjs": "^3.5.1",
     "vue-router": "^4.0.3",
     "vuex": "^4.0.0"
   },
