--- a/posvue/package.json
+++ b/posvue/package.json
@@ -10,6 +10,7 @@
     "axios": "^0.26.0",
     "boxicons": "^2.1.1",
     "bulma": "^0.9.3",
+    "bulma-toast": "^2.4.1",
     "chart.js": "^2.9.4",
     "core-js": "^3.8.3",
     "vue": "^3.2.13",
