--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,22 @@
 posvue/src/components/Chart.vue
 posdjango/db.sqlite3
 posdjango/db.sqlite3
+posdjango/media/uploads/ales-krivec-4miBe6zg5r0-unsplash_1_8OdX8HI.jpg
+posdjango/db.sqlite3
+posdjango/employee/__pycache__/models.cpython-310.pyc
+posdjango/media/uploads/profile4.jpg
+.gitignore
+posdjango/media/uploads/profile3_H9rPPIo.jpg
+posdjango/media/uploads/profile2.jpg
+posdjango/media/uploads/profile1_Lp1Xd8E.jpg
+.gitignore
+posdjango/media/uploads/productMakeup_pm1MdpB.jpg
+posdjango/media/uploads/productMakeup_86FB809.jpg
+posdjango/media/uploads/productLipstickBlack_6jwXJZB.jpg
+.gitignore
+posdjango/media/uploads/productCameraBlack_x8jOCic.jpg
+posdjango/media/uploads/productCameraBlack_Ukpz4jh.jpg
+posdjango/media/uploads/default.jpg
+posdjango/media/uploads/ales-krivec-4miBe6zg5r0-unsplash_1.jpg
+posdjango/employee/__pycache__/models.cpython-310.pyc
+posdjango/db.sqlite3
