--- a/posvue/package.json
+++ b/posvue/package.json
@@ -13,6 +13,7 @@
     "bulma-toast": "^2.4.1",
     "chart.js": "^2.9.4",
     "core-js": "^3.8.3",
+    "gsap": "^3.10.3",
     "vue": "^3.2.13",
     "vue-chart-3": "^3.1.2",
     "vue-chartjs": "^3.5.1",
